@@ -1,3 +1,9 @@
+2002-10-16  Emmanuel Vecchia <emmanuel.vecchia@sun.com>
+
+        * gnome-calc.c: Add Page_Up, Page_Down, Home and End to
+        the extra bindings so that now the calculator works with and
+        without numlock.
+
 2002-09-06  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* gnome-calc.c: Do not set accelerators for upper case characters
